refactored & fixed array overlaps function & changed status analytics

--- a/apim-dashboard-alpinejs/src/main/resources/META-INF/resources/css/apim.css
+++ b/apim-dashboard-alpinejs/src/main/resources/META-INF/resources/css/apim.css
@@ -7,3 +7,7 @@ table td, th {
     vertical-align: middle !important;
     text-align: center !important;
 }
+
+.alert-danger ul {
+	margin-bottom: 0;
+}
